--- a/src/style/layout/_footer.scss
+++ b/src/style/layout/_footer.scss
@@ -67,3 +67,9 @@
     transform: translateY(-2px);
   }
 }
+
+.contact-email {
+  cursor: pointer;
+  font-size: 3rem;
+  text-decoration: underline;
+}
